Applied Material Theme

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">@color/cardview_shadow_start_color</color>
+    <color name="colorPrimaryDark">@color/design_default_color_on_secondary</color>
+    <color name="colorAccent">@color/cardview_light_background</color>
 </resources>
