--- a/app/src/main/res/menu/menu_actionbar_fullimage.xml
+++ b/app/src/main/res/menu/menu_actionbar_fullimage.xml
@@ -4,16 +4,21 @@
     <item
         android:id="@+id/menu_actionbar_label"
         android:orderInCategory="1"
-        android:title="label"
-        app:showAsAction="ifRoom" />
+        android:title="Label"
+        app:showAsAction="always" />
     <item
         android:id="@+id/menu_actionbar_ocr"
         android:orderInCategory="2"
         android:title="OCR"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/menu_actionbar_face"
         android:orderInCategory="3"
-        android:title="face"
-        app:showAsAction="ifRoom" />
+        android:title="Face"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_actionbar_barcode"
+        android:orderInCategory="4"
+        android:title="Barcode"
+        app:showAsAction="always" />
 </menu>
