--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">@color/cardview_shadow_start_color</color>
     <color name="colorPrimaryDark">@color/design_default_color_on_secondary</color>
     <color name="colorAccent">@color/cardview_light_background</color>
+    <color name="whitesmoke">#F5F5F5</color>
 </resources>
