--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/cardview_shadow_start_color</color>
-    <color name="colorPrimaryDark">@color/design_default_color_on_secondary</color>
+    <color name="colorPrimary">#B7B8E6</color>
+    <color name="colorPrimaryDark">#0A0A24</color>
     <color name="colorAccent">@color/cardview_light_background</color>
     <color name="whitesmoke">#F5F5F5</color>
 </resources>
