--- a/app/src/main/res/menu/menu_actionbar_fullimage.xml
+++ b/app/src/main/res/menu/menu_actionbar_fullimage.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_actionbar_tab"
+        android:id="@+id/menu_actionbar_firebaseimageml"
+        android:icon="@mipmap/firebasemlkit_foreground"
         android:orderInCategory="0"
-        android:title="ML"
+        android:title="Firebase Image ML"
         app:showAsAction="ifRoom" />
 </menu>
