--- a/app/src/main/res/menu/menu_actionbar_fullimage.xml
+++ b/app/src/main/res/menu/menu_actionbar_fullimage.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_actionbar_firebaseimageml"
+        android:contentDescription="Firebase Image ML"
         android:icon="@mipmap/firebasemlkit_foreground"
         android:orderInCategory="0"
         android:title="Firebase Image ML"
